--- a/app/colors.css
+++ b/app/colors.css
@@ -3,3 +3,9 @@ $c-gray1: #585858;
 $c-green1: #118C4E;
 $c-green2: #C1E1A6;
 $c-orange1: #FF9009;
+
+$c-retro-blue1: rgb(64,50,133);
+$c-retro-blue2: rgb(108, 94, 181);
+$c-retro-blue3: rgb(49, 32, 220);
+$c-retro-blue4: rgb(146, 140, 255);
+$c-retro-grey1: rgb(149, 149, 149);
