--- a/app/colors.css
+++ b/app/colors.css
@@ -4,6 +4,11 @@ $c-green1: #118C4E;
 $c-green2: #C1E1A6;
 $c-orange1: #FF9009;
 
+$c-p1-beige: #edd9c0;
+$c-p1-green: #c9d8c5;
+$c-p1-gray: #a8b6bf;
+$c-p1-brown: #7d4627;
+
 $c-retro-blue1: rgb(64,50,133);
 $c-retro-blue2: rgb(108, 94, 181);
 $c-retro-blue3: rgb(49, 32, 220);
