--- a/app/colors.css
+++ b/app/colors.css
@@ -99,3 +99,11 @@ $c-purple600: #915aba;
 
 $c-brown500: #a0744c;
 $c-brown600: #8b5e37;
+
+@define-extend fat-header {
+  font-size: 4rem;
+  color: white;
+  text-shadow: 0px 1px 2px rgba(50,50,50,0.7);
+  font-weight: 800;
+  letter-spacing: -0.5px;
+}
