--- a/app/web/pages/LoginPage.css
+++ b/app/web/pages/LoginPage.css
@@ -1,5 +1,5 @@
 
-@import "../../colors.css";
+@import '../../colors.css';
 
 .LoginPage {
   display: flex;
@@ -8,15 +8,16 @@
   align-items: center;
   min-height: 100vh;
   width: 100%;
+
+  /*
   background-image: url('https://c2.staticflickr.com/8/7456/26977614484_44ad17f5bc_h.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  */
 
   &__Header {
-    font-size: 2.5rem;
-    color: white;
-    text-shadow: 0px 0px 2px rgba(0,0,0,1);
+    @extend fat-header;
     margin-bottom: 1rem;
   }
 
@@ -31,20 +32,29 @@
     label {
       display: block;
       margin-right: 10px;
-      font-size: 0.9rem;
+      font-size: 1.1rem;
       font-weight: 600;
       min-width: 100px;
-      text-shadow: 0px 0px 1px rgba(0,0,0,1);
+      text-shadow: 0px 1px 1px rgba(50,50,50,0.5);
+      letter-spacing: 1px;
       color: white;
     }
 
     input {
-      border: 1px solid $c-retro-grey1;
+      border: 0;
+      background-color: color($c-gray100 a(50%));
+      color: color($c-blue600 a(90%));
       border-radius: 2px;
-      padding: 4px;
+      padding: 0 1rem;
+      font-weight: 800;
       margin: 0;
-      font-size: 1rem;
-      line-height: 1.5;
+      letter-spacing: 1px;
+      font-size: 2rem;
+      line-height: 2;
+      outline: none;
+      &::placeholder {
+        color: color($c-blue500 a(50%));
+      }
     }
   }
 }
