--- a/app/web/pages/SignOutPage.css
+++ b/app/web/pages/SignOutPage.css
@@ -1,5 +1,5 @@
 
-@import "../../colors.css";
+@import '../../colors.css';
 
 .SignOutPage {
   display: flex;
@@ -14,9 +14,7 @@
   background-repeat: no-repeat;
 
   &__Header {
-    font-size: 2.5rem;
-    color: white;
-    text-shadow: 0px 0px 2px rgba(0,0,0,1);
+    @extend fat-header;
     margin-bottom: 1rem;
   }
 }
