--- a/app/web/pages/LoginPage.css
+++ b/app/web/pages/LoginPage.css
@@ -72,6 +72,7 @@
   }
 
   &__CloudOne {
+    z-index: 10;
     position: fixed;
     width: 200px;
     height: 200px;
@@ -85,6 +86,7 @@
   }
 
   &__CloudTwo {
+    z-index: 10;
     position: fixed;
     width: 100px;
     height: 100px;
@@ -108,6 +110,54 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+  }
+
+  &__Sun {
+    font-family: 'Sun';
+    font-size: 200px;
+    line-height: 1;
+    position: fixed;
+    top: 50px;
+    right: 100px;
+    animation-duration: 100s;
+    animation-name: slow-rotate-sun;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    /* animation-direction: alternate; */
+
+    &--Morning, &--Evening {
+      color: white;
+      opacity: 0.8;
+      &:after {
+        content: 'U';
+      }
+    }
+    &--Day {
+      color: rgba(255, 222, 0, 1);
+      text-shadow: 0px 2px 0px color(rgba(255, 222, 0, 1) lightness(30%));
+      opacity: 1;
+      &:after {
+        content: 'V';
+      }
+    }
+  }
+}
+
+@keyframes slow-rotate-sun {
+  0% {
+    transform: rotateZ(0deg) scale(1, 1);
+  }
+  25% {
+    transform: rotateZ(90deg) scale(1.1, 1.1);
+  }
+  50% {
+    transform: rotateZ(180deg) scale(1, 1);
+  }
+  75% {
+    transform: rotateZ(270deg) scale(1.1, 1.1);
+  }
+  100% {
+    transform: rotateZ(360deg) scale(1, 1);
   }
 }
 
@@ -153,4 +203,10 @@
   &--Disabled {
     background-image: url(/img/btn_google_signin_dark_disabled_web@2x.png);
   }
+}
+
+
+@font-face {
+  font-family: 'Sun';
+  src: url('/fonts/Sun.ttf') format('truetype');
 }
