--- a/app/web/pages/LoginPage.css
+++ b/app/web/pages/LoginPage.css
@@ -195,18 +195,18 @@
   cursor: pointer;
 
   &--Active {
-    background-image: url(/img/btn_google_signin_dark_normal_web@2x.png);
+    background-image: url(../img/btn_google_signin_dark_normal_web@2x.png);
     &:hover {
-      background-image: url(/img/btn_google_signin_dark_pressed_web@2x.png);
+      background-image: url(../img/btn_google_signin_dark_pressed_web@2x.png);
     }
   }
   &--Disabled {
-    background-image: url(/img/btn_google_signin_dark_disabled_web@2x.png);
+    background-image: url(../img/btn_google_signin_dark_disabled_web@2x.png);
   }
 }
 
 
 @font-face {
   font-family: 'Sun';
-  src: url('/fonts/Sun.ttf') format('truetype');
+  src: url('../fonts/Sun.ttf') format('truetype');
 }
